// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LabelWithPercent /> matches snapshot with isActive=true 1`] = `
"
<div class=\\"d-inline-block mw-100\\">
  <span class=\\"components-label badge bg-default components-label-dark components-label-with-hover mb-0 ps-0 text-start\\">
    <span class=\\"me-1 px-1 bg-primary text-white components-labelWithPercent-percent\\">
      25
    </span>
    <span>
      <span class=\\"components-label-name\\">
        foo:
      </span>
      <span class=\\"components-label-value\\">
        bar
      </span>
    </span>
    <svg aria-hidden=\\"true\\"
         focusable=\\"false\\"
         data-prefix=\\"fas\\"
         data-icon=\\"times\\"
         class=\\"svg-inline--fa fa-times fa-w-11 cursor-pointer text-reset ms-1\\"
         role=\\"img\\"
         xmlns=\\"http://www.w3.org/2000/svg\\"
         viewbox=\\"0 0 352 512\\"
         style=\\"font-size: 100%;\\"
    >
      <path fill=\\"currentColor\\"
            d=\\"M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z\\"
      >
      </path>
    </svg>
  </span>
  <div class=\\"progress components-labelWithPercent-progress me-1\\">
    <div class=\\"progress-bar bg-warning\\"
         role=\\"progressbar\\"
         style=\\"width: 50%;\\"
         aria-valuenow=\\"50\\"
         aria-valuemin=\\"0\\"
         aria-valuemax=\\"100\\"
    >
    </div>
  </div>
</div>
"
`;

exports[`<LabelWithPercent /> matches snapshot with offset=0 1`] = `
"
<div class=\\"d-inline-block mw-100\\">
  <span class=\\"components-label badge bg-default components-label-dark components-label-with-hover mb-0 ps-0 text-start\\">
    <span class=\\"me-1 px-1 bg-primary text-white components-labelWithPercent-percent\\">
      25
    </span>
    <span>
      <span class=\\"components-label-name\\">
        foo:
      </span>
      <span class=\\"components-label-value\\">
        bar
      </span>
    </span>
  </span>
  <div class=\\"progress components-labelWithPercent-progress me-1\\">
    <div class=\\"progress-bar bg-warning\\"
         role=\\"progressbar\\"
         style=\\"width: 50%;\\"
         aria-valuenow=\\"50\\"
         aria-valuemin=\\"0\\"
         aria-valuemax=\\"100\\"
    >
    </div>
  </div>
</div>
"
`;

exports[`<LabelWithPercent /> matches snapshot with offset=25 1`] = `
"
<div class=\\"d-inline-block mw-100\\">
  <span class=\\"components-label badge bg-default components-label-dark components-label-with-hover mb-0 ps-0 text-start\\">
    <span class=\\"me-1 px-1 bg-primary text-white components-labelWithPercent-percent\\">
      25
    </span>
    <span>
      <span class=\\"components-label-name\\">
        foo:
      </span>
      <span class=\\"components-label-value\\">
        bar
      </span>
    </span>
  </span>
  <div class=\\"progress components-labelWithPercent-progress me-1\\">
    <div class=\\"progress-bar bg-transparent\\"
         role=\\"progressbar\\"
         style=\\"width: 25%;\\"
         aria-valuenow=\\"25\\"
         aria-valuemin=\\"0\\"
         aria-valuemax=\\"100\\"
    >
    </div>
    <div class=\\"progress-bar bg-warning\\"
         role=\\"progressbar\\"
         style=\\"width: 50%;\\"
         aria-valuenow=\\"50\\"
         aria-valuemin=\\"0\\"
         aria-valuemax=\\"100\\"
    >
    </div>
  </div>
</div>
"
`;
